--- a/humidity.html
+++ b/humidity.html
@@ -68,7 +68,7 @@
         <h1 class="text-center mb-3 text-info">Humidity</h1>
         <hr class="mb-3 ">
         <img src=".\Resources\assets\images\Fig2.png" width="700" height="500" class=" float-center" alt="">
-        <p>Latitude does not appear to have much of an affect on the humidity of a climate. This is more related to the city's proximity to an ocean.</p>
+        <p>Latitude does not appear to have an effect on the humidity of a climate. This is more likely related to other aspects of the location, such as altitude or proximity to a body of water.</p>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4">
