--- a/cloudiness.html
+++ b/cloudiness.html
@@ -68,7 +68,7 @@
         <h1 class="text-center mb-3 text-info">Cloudiness</h1>
         <hr class="mb-3 ">
         <img src=".\Resources\assets\images\Fig3.png" width="700" height="500" class=" float-center" alt="">
-        <p> There does not seem to be a discernable trend when plotting cloudiness versus latitude, which is shown in this scatter plot.</p>
+        <p> There does not seem to be a relationship between the Latitude and the cloudiness of a city .</p>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4">
