--- a/windSpeed.html
+++ b/windSpeed.html
@@ -68,8 +68,7 @@
         <h1 class="text-center mb-3 text-info">Wind Speed</h1>
         <hr class="mb-3 ">
         <img src=".\Resources\assets\images\Fig4.png" width="700" height="500" class=" float-center" alt="">
-        <p>Cities close to the equator appear to have significantly less wind than others. 
-            Alternatively, cities between 40 and 80 degrees North  are by far the windiest, and have wind speeds than their Southern counterparts.</p>
+        <p> There does not seem to be a relationship between the Latitude and the Wind Speed in a city .</p>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4">
