--- a/temperature.html
+++ b/temperature.html
@@ -71,7 +71,7 @@
         <hr class="mb-3 ">
         <img src=".\Resources\assets\images\Fig1.png" width="700" height="500" class=" float-center" alt="">
         <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 degrees latitude). 
-            More interstingly, however, si the fact that the southern hemisphere tens to be warmer this time of year than the northern hemisphere.
+            More interstingly, however, is the fact that the southern hemisphere tens to be warmer this time of year than the northern hemisphere.
             This may be due to the tilt of the earth at the time of the year when this data was gathered</p>
       </div>
       <div class="col-sm-1"></div>
